maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: not found: value stSurBiscuit
  	while(stSurBiscuit)
              ^